Trying to fix blurry text

--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -10,3 +10,21 @@ canvas {
 canvas:focus{
   outline:none;
 }
+.container{
+  position: relative;
+  overflow: none;
+}
+/* #overlay{
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  padding: 1em;
+} */
+#text{
+  background-color: transparent;/* rgba(0, 0, 0, 0.7);/* transparent;*/
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+}
